# flask-csv-pie-chart

./: Pie-chart.ipynb  README.md  app.py  pyproject.toml  server.py  views.py  wsgi.py
static/: main.js
templates/: base.html  index.html
